[package]
name = "sdb"
version = "0.1.0"
edition = "2024"
authors = ["Pol Marcet Sardà <polmarcetsarda@gmail.com>"]
description = "A simple debugger"
license = "GPL-3.0-or-later"
repository = "https://github.com/Destroyerrrocket/sdb.git"

[dependencies]
sdblib = { path = "../sdblib" }
clap = { version = "^4.0.0", features = ["derive"] }
tracing = "^0.1.0"
tracing-appender = "^0.2.0"
tracing-subscriber = "^0.3.0"
chrono = "^0.4.0"
ratatui = { version = "^0.28.0", features = ["all-widgets"] }
color-eyre = "*"
tui-input = "*"
chumsky = "0.11.1"
ariadne = "0.5.1"
