[package]
name = "sdb"
version = "0.1.0"
edition = "2024"
authors = ["Pol Marcet Sardà <polmarcetsarda@gmail.com>"]
description = "A simple debugger"
license = "GPL-3.0-or-later"
repository = "https://github.com/Destroyerrrocket/sdb.git"

[dependencies]
sdblib = { path = "../sdblib" }
tokio = { version = "^1.48", features = ["full"] }
clap = { version = "^4.0.0", features = ["derive"] }
tracing = "^0.1.0"
tracing-appender = "^0.2.0"
tracing-subscriber = "^0.3.0"
chrono = "^0.4.0"
ratatui = { version = "0.28.0", features = ["all-widgets"] }
crossterm = { version = "0.28.0", features = ["event-stream"] }
futures = "0.3.28"
color-eyre = "*"
tui-input = "*"
chumsky = "0.11.1"
ariadne = "0.5.1"
