[package]
name = "sdblib"
version = "0.1.0"
edition = "2024"
authors = ["Pol Marcet Sardà <polmarcetsarda@gmail.com>"]
description = "A simple debugger library in Rust based on the book 'Building a debugger' by Sy Brand"
license = "GPL-3.0-or-later"
repository = "https://github.com/Destroyerrrocket/sdb.git"

[dependencies]
tracing = "0.1.41"
nix = { version = "0.30.1", features = ["ptrace"] }
thiserror = "2.0.17"
